--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildFeatures{
+        viewBinding true
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -42,6 +46,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.1.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -71,8 +76,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
 
     //Dagger hilt
-    implementation "com.google.dagger:hilt-android:2.38.1"
+     implementation "com.google.dagger:hilt-android:2.38.1"
     annotationProcessor "com.google.dagger:hilt-compiler:2.38.1"
+
+    implementation 'com.google.dagger:dagger:2.38.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.38.1'
 
     //Firebase
     implementation 'com.google.firebase:firebase-auth-ktx:22.0.0'
