--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.tech.decordash">
 
     <application
         android:allowBackup="true"
+        android:name=".DecorDash"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -12,7 +14,7 @@
         android:theme="@style/Theme.DecorDash"
         tools:targetApi="31">
         <activity
-            android:name=".ShoppingActivity"
+            android:name=".activites.ShoppingActivity"
             android:exported="false" />
         <activity
             android:name=".activites.LoginRegisterActivity"
